overflow correction

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body{
     height: 100vh;
     background-color: hsl(211, 76%, 53%);
     position: relative;
+    overflow: hidden;
 }
 h1 {
     color: #FCCF00;
